Fix scroll: remove overflow-x hidden that interferes with Lenis

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,8 +20,6 @@
 html {
   font-family: var(--font-anton);
   scrollbar-width: thin;
-  overflow-x: hidden;
-  width: 100%;
 
   &.nav {
     overflow: hidden;
@@ -39,8 +37,6 @@ html.lenis-stopped {
 
 body {
   min-height: 100vh;
-  overflow-x: hidden;
-  width: 100%;
 }
 
 // custom cursor
